--- a/copilot/nlb/manifest.yml
+++ b/copilot/nlb/manifest.yml
@@ -25,7 +25,7 @@ nlb:
 cpu: 256       # Number of CPU units for the task.
 memory: 512    # Amount of memory in MiB used by the task.
 platform: linux/x86_64  # See https://aws.github.io/copilot-cli/docs/manifest/lb-web-service/#platform
-count: 1       # Number of tasks that should be running in your service.
+count: 3       # Number of tasks that should be running in your service.
 exec: true     # Enable running commands in your container.
 network:
   connect: true # Enable Service Connect for intra-environment traffic between services.
@@ -37,6 +37,12 @@ network:
 #
 #variables:                    # Pass environment variables as key value pairs.
 #  LOG_LEVEL: info
+
+variables:
+  CADDY_CLUSTERING_REDIS_HOST:
+    from_cfn: RedisEndpoint
+  CADDY_CLUSTERING_REDIS_TLS: false
+  CADDY_CLUSTERING_REDIS_TLS_INSECURE: true
 
 #secrets:                      # Pass secrets from AWS Systems Manager (SSM) Parameter Store.
 #  GITHUB_TOKEN: GITHUB_TOKEN  # The key is the name of the environment variable, the value is the name of the SSM parameter.
